--- a/index.html
+++ b/index.html
@@ -1,13 +1,280 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>Educação Básica SESI PR</title>
+    <link rel="stylesheet" href="styles/main.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <header>
+      <div class="header-container">
+        <div class="logos-container">
+          <img
+            class="image-logo"
+            src="logos/logo_sistema_fiep.svg"
+            alt="Logo do Sistema FIEP"
+          />
+          <img class="image-logo" src="logos/logo_fiep.svg" alt="Logo FIEP" />
+          <img class="image-logo" src="logos/logo_senai.svg" alt="Logo SENAI" />
+          <img class="image-logo" src="logos/logo_sesi.svg" alt="Logo SESI" />
+          <img class="image-logo" src="logos/logo_iel.svg" alt="Logo IEL" />
+        </div>
+        <div class="header-text-container">
+          <span class="header-text">Carreira</span>
+          <span class="header-text">Licitações</span>
+          <span class="header-text">Imprensa</span>
+          <span class="header-text">Ouvidoria</span>
+          <span class="header-text">SAC</span>
+        </div>
+      </div>
+    </header>
+    <main class="main-container">
+      <section class="section-1">
+        <img class="selo-principal" src="selo_principal.svg" />
+        <img class="image-girl" src="Image_section.svg" />
+        <h1>FORMANDO GERAÇÕES QUE FAZEM A DIFERENÇA</h1>
+        <img class="layer-1" src="Layer_1.svg" />
+        <img class="framevideo" src="framevideo_16_9.svg" />
+        <div class="logos-div-section-1">
+          <img class="sesi-industria" src="logos/sesi_da_industria.svg" />
+          <img class="sesi-inter" src="logos/sesi_internacional.svg" />
+          <img class="sesi-ref" src="logos/sesi_referencia.svg" />
+          <img class="sesi-ref-inter" src="logos/sesi_referencia_inter.svg" />
+        </div>
+        <div class="description">
+          <span class="description-text-1">
+            A Educação Básica do Sesi Paraná há 20 anos revoluciona o ensino,
+            preparando estudantes para os desafios da indústria e do mundo
+            digital. Nossa metodologia inovadora, baseada no conceito maker,
+            estimula a criatividade, o pensamento crítico e o protagonismo dos
+            alunos.
+          </span>
+          <span class="description-highlight"
+            >AQUI, O APRENDIZADO VAI ALÉM DA TEORIA!</span
+          >
+          <span class="description-text-2">
+            Com um ambiente colaborativo e tecnologias de ponta, os estudantes
+            desenvolvem habilidades essenciais para o futuro, explorando na
+            prática soluções para desafios reais. 
+          </span>
+        </div>
+      </section>
+      <section class="section-2">
+        <img src="Image_Container.svg" />
+        <div class="section-2-text-button-container">
+          <div class="section-2-text-container">
+            <span class="section-2-highlight">
+              Diferenciais que desenvolvem alunos para fazer a diferença
+            </span>
+            <span class="section-2-text">
+              Quer entender como essa metodologia transforma o aprendizado?<br />
+              Conheça mais sobre nosso modelo de ensino inovador.
+            </span>
+          </div>
+          <button class="section-2-button">Quero Conhecer</button>
+        </div>
+        <div>
+          <div class="section-2-icons">
+            <img src="/icons/campaign.svg" />
+            <span>Protagonismo</span>
+          </div>
+          <div class="section-2-icons">
+            <img src="/icons/smart_toy.svg" />
+            <span>Competições de Robótica</span>
+          </div>
+          <div class="section-2-icons">
+            <img src="/icons/groups.svg" />
+            <span>Trabalhos em equipe</span>
+          </div>
+          <div class="section-2-icons">
+            <img src="/icons/handshake.svg" />
+            <span>Parcerias com a indústria </span>
+          </div>
+          <div class="section-2-icons">
+            <img src="/icons/lightbulb.svg" />
+            <span>Inovação e tecnologia</span>
+          </div>
+        </div>
+      </section>
+      <section class="section-3">
+        <div class="section-3-text-box">
+          <span class="section-3-highlight">Metodologia STEAM:</span>
+          <span class="section-3-highlight-normal"
+            >aprendizado para o futuro</span
+          >
+          <span class="section-3-text"
+            >Na Educação Básica do Sesi, a metodologia STEAM integra as
+            disciplinas de Ciências, Tecnologia, Engenharia, Artes e Matemática,
+            promovendo um aprendizado dinâmico, unindo criatividade, inovação e
+            resolução de problemas reais.
+          </span>
+        </div>
+        <div>
+          <div class="section-3-cards">
+            <div
+              style="
+                display: flex;
+                justify-content: flex-start;
+                flex-direction: column;
+              "
+            >
+              <img src="cards/ciencia.svg" />
+            </div>
+            <div
+              style="
+                display: flex;
+                flex-direction: column;
+                justify-content: start;
+                gap: 12px;
+              "
+            >
+              <span class="section-3-card-title" style="color: #8749a7"
+                >Ciências</span
+              >
+              <span
+                >Estimula a investigação e o pensamento crítico para compreender
+                fenômenos e desenvolver soluções.</span
+              >
+            </div>
+          </div>
+          <div class="section-3-cards">
+            <div
+              style="
+                display: flex;
+                justify-content: flex-start;
+                flex-direction: column;
+              "
+            >
+              <img src="cards/engenharia.svg" />
+            </div>
+            <div
+              style="
+                display: flex;
+                flex-direction: column;
+                justify-content: start;
+                gap: 12px;
+              "
+            >
+              <span class="section-3-card-title" style="color: #4888a5"
+                >Engenharia</span
+              >
+              <span
+                >Foca na aplicação prática do conhecimento para criar, testar e
+                aprimorar projetos e protótipos.</span
+              >
+            </div>
+          </div>
+          <div class="section-3-cards">
+            <div
+              style="
+                display: flex;
+                justify-content: flex-start;
+                flex-direction: column;
+              "
+            >
+              <img src="cards/tecnologia.svg" />
+            </div>
+            <div
+              style="
+                display: flex;
+                flex-direction: column;
+                justify-content: start;
+                gap: 12px;
+              "
+            >
+              <span class="section-3-card-title" style="color: #49a7a4"
+                >Tecnologia
+              </span>
+              <span
+                >Prepara os alunos para o mundo digital, incentivando o uso de
+                ferramentas e inovações tecnológicas.</span
+              >
+            </div>
+          </div>
+          <div class="section-3-cards">
+            <div
+              style="
+                display: flex;
+                justify-content: flex-start;
+                flex-direction: column;
+              "
+            >
+              <img src="cards/artes.svg" />
+            </div>
+            <div
+              style="
+                display: flex;
+                flex-direction: column;
+                justify-content: start;
+                gap: 12px;
+              "
+            >
+              <span class="section-3-card-title" style="color: #82a235"
+                >Artes</span
+              >
+              <span
+                >Desenvolve a expressão criativa e o pensamento inovador,
+                essenciais para a solução de desafios complexos.</span
+              >
+            </div>
+          </div>
+          <div class="section-3-cards">
+            <div
+              style="
+                display: flex;
+                justify-content: flex-start;
+                flex-direction: column;
+              "
+            >
+              <img
+                style="display: flex; justify-content: start"
+                src="cards/matematica.svg"
+              />
+            </div>
+            <div
+              style="
+                display: flex;
+                flex-direction: column;
+                justify-content: start;
+                gap: 12px;
+              "
+            >
+              <span class="section-3-card-title" style="color: #e77222"
+                >Matemática</span
+              >
+              <span
+                >Aprimora o raciocínio lógico e a capacidade analítica,
+                fundamentais para a resolução de problemas.</span
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-4">
+        <div
+          style="display: flex; flex-direction: column; gap: 8px; width: 380px"
+        >
+          <span class="section-4-text-highlight"
+            >Acesse o material completo sobre a nossa metodologia</span
+          >
+          <span class="section-4-text-normal"
+            >Saiba todos os detalhes sobre a metodologia e diferenciais da
+            Educação Básica do Sesi.
+          </span>
+        </div>
+        <div class="section-4-form-box">
+          <span>Baixe nosso material exclusivo.</span>
+        </div>
+      </section>
+      <section class="section-5"></section>
+      <section class="section-6"></section>
+      <footer></footer>
+    </main>
   </body>
 </html>
