feat: finished main styling

--- a/index.html
+++ b/index.html
@@ -270,11 +270,226 @@
         </div>
         <div class="section-4-form-box">
           <span>Baixe nosso material exclusivo.</span>
+          <form style="display: flex; flex-direction: column; gap: 16px">
+            <div class="section-4-input-container">
+              <label class="section-4-input-label" for="nome">Nome</label>
+              <input
+                class="section-4-input"
+                type="text"
+                id="nome"
+                name="nome"
+                placeholder="Digite seu ...."
+                required
+              />
+            </div>
+
+            <div class="section-4-input-container">
+              <label class="section-4-input-label" for="email">E-mail</label>
+              <input
+                class="section-4-input"
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Digite seu ...."
+                required
+              />
+            </div>
+
+            <div class="section-4-input-container" style="margin-bottom: 16px">
+              <label class="section-4-input-label" for="telefone"
+                >Telefone</label
+              >
+              <input
+                class="section-4-input"
+                type="tel"
+                id="telefone"
+                name="telefone"
+                placeholder="Digite seu ...."
+                required
+              />
+            </div>
+
+            <div>
+              <button class="section-4-button" type="submit">
+                Acessar Material
+              </button>
+            </div>
+          </form>
         </div>
       </section>
-      <section class="section-5"></section>
-      <section class="section-6"></section>
-      <footer></footer>
+      <section class="section-5">
+        <div style="width: 100%">
+          <div class="section-5-highlight">
+            <span
+              >Conheça todas as instituições de ensino da <br />
+              Educação Básica do Sesi</span
+            >
+          </div>
+          <div style="flex-direction: row; display: flex; gap: 32px">
+            <div class="sesi-card-container">
+              <div class="sesi-card">
+                <div class="sesi-card-header">
+                  <img
+                    src="sesi_industria_white.svg"
+                    alt="Colégio Sesi da Indústria"
+                  />
+                </div>
+                <div class="sesi-card-body">
+                  <p>
+                    Metodologia de ensino inovadora,<br />
+                    que ajuda a desenvolver o conhecimento e competências
+                    importantes para todos os desafios da vida.
+                  </p>
+                </div>
+                <div class="sesi-card-footer">
+                  <a href="#" target="_blank">
+                    Conheça
+                    <img src="external-link.svg" alt="Seta para a direita" />
+                  </a>
+                </div>
+              </div>
+              <div class="sesi-card">
+                <div class="sesi-card-header" style="background-color: #2c7bd8">
+                  <img
+                    src="sesi_inter_white.svg"
+                    alt="Colégio Sesi da Indústria"
+                  />
+                </div>
+                <div class="sesi-card-body">
+                  <p>
+                    Educação que trabalha o desenvolvimento do conhecimento e de
+                    competências com imersão Bilíngue, Trilíngue e cultura
+                    estrangeiras.
+                  </p>
+                </div>
+                <div class="sesi-card-footer">
+                  <a href="#" target="_blank">
+                    Conheça
+                    <img src="external-link.svg" alt="Seta para a direita" />
+                  </a>
+                </div>
+              </div>
+              <div class="sesi-card">
+                <div class="sesi-card-header" style="background-color: #2fafa6">
+                  <img
+                    src="sesi_referencia_white.svg"
+                    alt="Colégio Sesi da Indústria"
+                  />
+                </div>
+                <div class="sesi-card-body">
+                  <p>
+                    A Unidade em São José dos Pinhais foi selecionada para ser a
+                    primeira escola a oferecer as novidades tecnológicas e
+                    pedagógicas da rede Sesi no Brasil.
+                  </p>
+                </div>
+                <div class="sesi-card-footer">
+                  <a href="#" target="_blank">
+                    Conheça
+                    <img src="external-link.svg" alt="Seta para a direita" />
+                  </a>
+                </div>
+              </div>
+              <div class="sesi-card">
+                <div class="sesi-card-header" style="background-color: #003a59">
+                  <img
+                    src="sesi_referencia_internacional_white.svg"
+                    alt="Colégio Sesi da Indústria"
+                  />
+                </div>
+                <div class="sesi-card-body">
+                  <p>
+                    Com uma proposta pedagógica inovadora, unimos a tecnológica
+                    da Escola Sesi de Referência da Indústria com o ensino
+                    bilíngue do Colégio Sesi Internacional.
+                  </p>
+                </div>
+                <div class="sesi-card-footer">
+                  <a href="#" target="_blank">
+                    Conheça
+                    <img src="external-link.svg" alt="Seta para a direita" />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-6">
+        <img src="logo_20_anos_small.svg" />
+        <div style="width: 100%">
+          <div class="section-6-text-container" style="width: 100%">
+            <span class="section-6-text-highlight"
+              >Acompanhe a nossa história.</span
+            >
+            <div
+              style="
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+              "
+            >
+              <span class="section-6-text-normal"
+                >Siga a gente nas redes sociais e veja o dia a dia dos nossos
+                alunos.</span
+              >
+              <div style="display: flex; flex-direction: row; gap: 15px">
+                <img src="instagram.svg" />
+                <img src="facebook.svg" />
+                <img src="youtube.svg" />
+              </div>
+            </div>
+          </div>
+          <div class="section-6-links-container">
+            <span>Proteção e Privacidade de Dados</span>
+            <span>Política de privacidade</span>
+            <span>Programa de Integridade</span>
+          </div>
+        </div>
+      </section>
+      <footer class="footer">
+        <div class="footer-container">
+          <div class="logos-container">
+            <img
+              class="image-logo"
+              src="logos/logo_sistema_fiep.svg"
+              alt="Logo do Sistema FIEP"
+            />
+            <img class="image-logo" src="logos/logo_fiep.svg" alt="Logo FIEP" />
+            <img
+              class="image-logo"
+              src="logos/logo_senai.svg"
+              alt="Logo SENAI"
+            />
+            <img class="image-logo" src="logos/logo_sesi.svg" alt="Logo SESI" />
+            <img class="image-logo" src="logos/logo_iel.svg" alt="Logo IEL" />
+          </div>
+
+          <!-- Separador vertical -->
+          <div class="footer-separator"></div>
+
+          <div class="footer-text-container">
+            <span class="footer-text">SAC</span>
+            <span class="footer-text">Carreira</span>
+            <span class="footer-text">Licitações</span>
+            <span class="footer-text">Imprensa</span>
+            <span class="footer-text">Ouvidoria</span>
+          </div>
+        </div>
+
+        <div class="footer-divider"></div>
+
+        <div class="footer-bottom-text">
+          <p>
+            Sistema Fiep - Sistema Federação das Indústrias do Estado do
+            Paraná<br />
+            Av. Cândido de Abreu, 200 - Centro Cívico. CEP: 80530-000 -
+            Curitiba/PR
+          </p>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
